Rettet opp litt i den nye teksten

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -39,6 +39,6 @@ Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilit
 
 
 	% Sette inn hvor det passer
-	Som datastudenter med programmeringserfaring er det alltid en overhengende fare for at en begrenser ideer ved å tenke at "dette er ikke mulig å gjennomføre", hvor en heller burde tenke "dette er vanskelig å gjennomføre", eller "dette kan ikke  \emph{jeg} gjennomføre". Videre er det slik i Eksperter i Team at et godt konsept stiller like sterkt som en god gjennomføring. Det er det svært lurt å ikke legge for stor vekt på hva som er mulig og umulig.
+	Som datastudenter med programmeringserfaring er det alltid en overhengende fare for at en begrenser ideer ved å tenke at "dette er ikke mulig å gjennomføre", hvor en heller burde tenke "dette er vanskelig å gjennomføre", eller "dette kan ikke  \emph{jeg} gjennomføre". Det er det svært lurt å ikke legge for stor vekt på hva som er mulig og umulig. Det å involvere mennesker uten programmeringserfaring kan derfor være en fordel i slike prosjekter, spesielt, da det er slik i Eksperter i Team at et godt konsept stiller like sterkt som en god gjennomføring. 
 
 	Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, førte til et resultat ingen på gruppen så for seg i starten, men som alle var meget fornøyde med. Vi klarte med andre ord å dra nytte av synergieffektene som kommer av vår ulikheter.
