lagt til et delkapittel

--- a/latex/innledning.tex
+++ b/latex/innledning.tex
@@ -1,20 +1,10 @@
 \section{Innledning}
-Målet i Eksperter i Team (herunder EiT) er at studentene skal anvende
-sin fagkompetanse og utvikle sin samspillkompetanse gjennom å arbeide
-resultatrettet med relevante problemstillinger og situasjoner. Nedenfor
-er den overordnede intensjonen av EiT gjengitt:\\
+Målet i Eksperter i Team (herunder EiT) er at studentene skal anvende sin fagkompetanse og utvikle sin samspillkompetanse gjennom å arbeide resultatrettet med relevante problemstillinger og situasjoner. Nedenfor er den overordnede intensjonen av EiT gjengitt:
 
-``Målet med Eksperter i Team er at studentene både skal anvende sin
-fagkompetanse og utvikle sin samspillskompetanse gjennom å arbeide
-resultatrettet med relevante problemstillinger for samfunns- og
-arbeidsliv. Studentene skal utvikle sine teoretiske kunnskaper og
-praktiske ferdigheter i tverrfaglig prosjektarbeid og få trening i
-yrkesrelevante arbeidsmåter''\\
+\quote{"Målet med Eksperter i Team er at studentene både skal anvende sin fagkompetanse og utvikle sin samspillskompetanse gjennom å arbeide resultatrettet med relevante problemstillinger for samfunns- og arbeidsliv. Studentene skal utvikle sine teoretiske kunnskaper og praktiske ferdigheter i tverrfaglig prosjektarbeid og få trening i yrkesrelevante arbeidsmåter.
 
-Studentene skal gjennom felles refleksjon vinne økt innsikt i
-handlingsmønstre og væremåter som kreves for å få et godt resultat i et
-tverrfaglig prosjektarbeid. Emnet skal bidra til økt innsikt i andre
-fags egenart og deres måter å arbeide på. Samtidig skal emnet bidra til
-å styrke egen faglig identitet, gjennom samspillet i gruppen og måten
-egen fagkunnskap bidrar til prosjektet på.``
+Studentene skal gjennom felles refleksjon vinne økt innsikt i handlingsmønstre og væremåter som kreves for å få et godt resultat i et tverrfaglig prosjektarbeid. Emnet skal bidra til økt innsikt i andre fags egenart og deres måter å arbeide på. Samtidig skal emnet bidra til å styrke egen faglig identitet, gjennom samspillet i gruppen og måten egen fagkunnskap bidrar til prosjektet på."}
 
+
+	\subsection{Garbage Alert}
+	Dette prosjektet vil lede ut i ...
