de bonos +referanse

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -138,3 +138,7 @@ Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og
 tankegang, førte til et resultat ingen på gruppen så for seg i starten,
 men som alle var meget fornøyde med. Vi klarte å dra nytte av disse
 ulikhetene.
+
+
+\section{De Bonos hatter} %gruppelogg 14.03
+14. mars hadde alle gruppene i landsbyen en midtveispresentasjon av prosjektet. Etter hver presentasjon skulle de andre gruppene ta på seg ulike roller ved bruk av metaforiske “hatter”, for så å evaluere presentasjonen og prosjektet til hver gruppe som fremførte. Denne tilbakemeldingsteknikken heter De Bonos hatter og er basert på Edward De Bonos' "Six Thinking Hats" \cite{bonos}
