--- a/latex/referanser.tex
+++ b/latex/referanser.tex
@@ -1,7 +1,9 @@
-\begin{thebibliography}{1} %antall ref?
+\begin{thebibliography}{3} %antall ref?
 	\bibitem{Schwarz}
 	Schwarz 2002 The skilled facilitator. Jossey - Bass
 	\bibitem{Johnson}
 	Johnson \& Johnson 2006 Joining Together. Group theory and group skills. Pearson
+	\bibitem{bonos}
+	Edward De Bonos, Six Thinking Hats, Gran Ica Editions
 
 \end{thebibliography}
