Lagt til SPGR-relaterte greier

--- a/latex/innledning.tex
+++ b/latex/innledning.tex
@@ -7,4 +7,4 @@ Studentene skal gjennom felles refleksjon vinne økt innsikt i handlingsmønstre
 
 
 	\subsection{Garbage Alert}
-	Dette prosjektet vil lede ut i ...
+	Rawr
