Skrevet mer på introduksjonen lagt til en lett beskrivelse av spillet

--- a/latex/innledning.tex
+++ b/latex/innledning.tex
@@ -1,10 +1,14 @@
 \section{Innledning}
-Målet i Eksperter i Team (herunder EiT) er at studentene skal anvende sin fagkompetanse og utvikle sin samspillkompetanse gjennom å arbeide resultatrettet med relevante problemstillinger og situasjoner. Nedenfor er den overordnede intensjonen av EiT gjengitt:
+Denne rapporten vil utlede en beskrivelse av samarbeidet innad i en gruppe studenter, som et ledd i kurset \emph{Eksperter i Team} (herunder EiT), i landsbyen \emph{EiT3014: En spillverden på ett semester}.
 
-\quote{"Målet med Eksperter i Team er at studentene både skal anvende sin fagkompetanse og utvikle sin samspillskompetanse gjennom å arbeide resultatrettet med relevante problemstillinger for samfunns- og arbeidsliv. Studentene skal utvikle sine teoretiske kunnskaper og praktiske ferdigheter i tverrfaglig prosjektarbeid og få trening i yrkesrelevante arbeidsmåter.
+	\subsection{Eksperter i Team}
+	Målet i Eksperter i Team er at studentene skal anvende sin fagkompetanse og utvikle sin samspillkompetanse gjennom å arbeide resultatrettet med relevante problemstillinger og situasjoner. Nedenfor er den overordnede intensjonen av EiT gjengitt.
 
-Studentene skal gjennom felles refleksjon vinne økt innsikt i handlingsmønstre og væremåter som kreves for å få et godt resultat i et tverrfaglig prosjektarbeid. Emnet skal bidra til økt innsikt i andre fags egenart og deres måter å arbeide på. Samtidig skal emnet bidra til å styrke egen faglig identitet, gjennom samspillet i gruppen og måten egen fagkunnskap bidrar til prosjektet på."}
+	\quote{"Målet med Eksperter i Team er at studentene både skal anvende sin fagkompetanse og utvikle sin samspillskompetanse gjennom å arbeide resultatrettet med relevante problemstillinger for samfunns- og arbeidsliv. Studentene skal utvikle sine teoretiske kunnskaper og praktiske ferdigheter i tverrfaglig prosjektarbeid og få trening i yrkesrelevante arbeidsmåter.
+
+	Studentene skal gjennom felles refleksjon vinne økt innsikt i handlingsmønstre og væremåter som kreves for å få et godt resultat i et tverrfaglig prosjektarbeid. Emnet skal bidra til økt innsikt i andre fags egenart og deres måter å arbeide på. Samtidig skal emnet bidra til å styrke egen faglig identitet, gjennom samspillet i gruppen og måten egen fagkunnskap bidrar til prosjektet på."}
+
+	\subsection{Problemstilling}
+	"Hvordan kan en belyse nytten av resirkulering og redusert forbruk, lokalt og globalt, gjennom flerspiller-dataspill". Ut fra denne problemstillingen ledet vi ut et konsept vi har valgt å kalle \emph{Garbage Alert}, et spill hvor målet er å (passivt) samle inn søppel og avfall for gjenbruk til mer nyttige ting. Prosjektet var ikke tenkt å lede ut i et fullstendig spill. Vi hadde dog intensjoner om å skape en enkel prototype, for å hjelpe visualiseringen av prosjektet. Gjennom å raskt få ferdig noe som vi faktisk kunne prøve ville vi kunne fastslå hva som fungerer bra og hva som fungerer dårlig, og dermed videreutvikle konseptet. Måten vi arbeidet sammen og gjorde avgjørelser reflekterer dette valget – vi har ikke vært redde for å utforske alternative løsninger på problemstillingen.
 
 
-	\subsection{Garbage Alert}
-	Rawr
