--- a/konseptdokument/genre.tex
+++ b/konseptdokument/genre.tex
@@ -1,1 +1,6 @@
-\section{Sjangeren}
+\section{Sjangeren}\label{sec:sjangre}
+Om spillsjangre og sånt.
+\subsection{Eventyr}\label{sec:eventyr}
+Eventyr!
+\subsection{Rollespill}\label{sec:rollespill}
+RPG
