--- a/latex/referanser.tex
+++ b/latex/referanser.tex
@@ -3,5 +3,7 @@
 	Schwarz 2002 The skilled facilitator. Jossey - Bass
 	\bibitem{Johnson}
 	Johnson \& Johnson 2006 Joining Together. Group theory and group skills. Pearson
+	\bibitem{Scrum}
+	http://www.scrum.org/what-is-scrum
 
 \end{thebibliography}
