Updated, and added a general "problemstilling".

--- a/konseptdokument/problem.tex
+++ b/konseptdokument/problem.tex
@@ -1,1 +1,9 @@
-\section{Problemstilling}
+\section{Problemstilling}\label{sec:problemstilling}
+Dette avsnittet vil ta for seg den valgte problemstillingen, hva som lå
+til grunn dette valget, og hvordan gruppen tenkte seg et konsept rundt
+problemstillingen.
+\subsection{Selve problemestillingen}
+Den valgte problemstillingen er gjengitt nedenfor:
+\begin{quotation}
+\large\emph{``\input{../problemstilling}''}
+\end{quotation}
