--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -23,7 +23,12 @@ beskrevet.
 Han begynte sin spillkarriere med en Nintendo 64\cite{n64} i 1999. Da
 var det eventyr og rollespill (se Seksjon~\ref{sec:sjangre}) som Legend
 of Zelda\cite{legendofzelda} og Banjo Kazooie\cite{banjokazooie} som
-dominerte. Deretter gikk spillingen over til Counter-Strike og Warcraft
-da datamaskinen kom i hus. Han har i hovedsak vært en Nintendo
-fanboy\cite{fanboy}.
+dominerte. Deretter gikk spillfokuset  over på konkurransespill som
+Counter-Strike og Warcraft da datamaskinen kom i hus. Han har i hovedsak
+vært en Nintendo fanboy\cite{fanboy}.
 \end{description}
+\subsection{Mål}
+Det overordnede målet for gruppen var å lage et spillkonsept hvert
+gruppemedlem følte eierskap til, og var konformt med den valgte
+problemstillingen (se Seksjon~\ref{sec:problemstilling}). En prototype i
+tillegg til dette ville bli en bonus i forhold til målet.
