--- a/konseptdokument/references.tex
+++ b/konseptdokument/references.tex
@@ -1,4 +1,10 @@
-\begin{thebibliography}{9} %antall ref?
+\begin{thebibliography}{1} %antall ref?
 \bibitem{n64}
-	Nintendo 64 - \url{http://www.old-computers.com/museum/computer.asp?c=1242&st=2}
+	Nintendo 64\\\url{http://www.old-computers.com/museum/computer.asp?c=1242&st=2}
+\bibitem{legendofzelda}
+	placeholder
+\bibitem{banjokazooie}
+	placeholder
+\bibitem{fanboy}
+	Fanboy\\\url{http://dictionary.reference.com/browse/fanboy+or+fangirl}
 \end{thebibliography}
