de bonos hatter med bilde

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -9,12 +9,18 @@ Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilit
 	\subsection{Individuelle oppfatninger}
 	Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen var.
 
-	\begin{center}
-		\begin{figure}
-			\includegraphics[scale=0.5]{communication}
+			\begin{figure} [here]
+				\begin{center}
+					\includegraphics[scale=0.5]{communication}
+				\end{center}
 			\caption{Kommunikasjonsmønster}
 		\end{figure}
-	\end{center}
+		
+%h	Place the float here, i.e., at the same point it occurs in the source text.
+%t	Position at the top of the page.
+%b	Position at the bottom of the page.
+%p	Put on a special page for floats only.
+%!	Override internal parameters LaTeX uses for determining `good' float positions.
 
 	Dette kom som en overaskelse på gruppen. Det viste seg at Andreas, Kjetil og Trond var mest aktive, mens Ina og Christian var mer passive. Dette måtte diskuteres i gruppen.
 
@@ -72,8 +78,17 @@ Når man har på seg den grønne hatten er det ikke tillatt å gi kritikk. Man s
 \item[Blå hatt - prosessblikk] \hfill \\
 Her må man tenke prosesstyring. Man skal kartlegge hvor langt gruppen har kommet i prosessen, hva som trengs å gjøre og hvordan man kan ta beslutninger for å komme i mål. \\
 
+
 \end{description}
 
+		\begin{figure} [here]
+				\begin{center}
+					\includegraphics[scale=0.5]{debonos}
+				\end{center}
+			\caption{De Bonos hatter}
+		\end{figure}
+		
+		
 Gruppen som hadde presentasjon fikk etter tur tilbakemeldinger fra de forskjellige hattene. Dette var en bra måte for å få startet en diskusjon. Det var også et verktøy som bidro til å hjelpe gruppen med sitt videre arbeid på prosjektet. Hver gruppe fikk prøve seg som hver hatt. Videre gjennomgår vi de ulike situasjonen vi var i som hver hatt, og hvordan det føltes og gå inn i de forskjellige rollene.
 
 \subsection{De ulike rollene}
@@ -83,7 +98,26 @@ I den neste presentasjonsrunden ble vi tildelt den gule og hvite hatten. Disse v
 
 Andreas syntes det var både positive og negative sider med den svarte hatten (kritisk blikk). Det var enkelt å gi konkrete tilbakemeldinger på hva som kunne forbedres eller hva man ikke likte, men Andreas syntes at det var litt ubehagelig og krevende å si noe kritisk og samtidig passe på at man ikke sier noe som sårer dem man snakker til.
 
+Gruppen slet litt med å komme med innspill under den grønne hatten (kreativitet). Litt av grunnen til dette var at gruppen som presenterte allerede hadde en god idè, som var godt utviklet. Vi kom med noen innspill til dette, men Kjetil følte egentlig at vi var mer kritiske enn kreative, noe som gjorde rollen vanskelig.
+
+
 \subsection{I sentrum av seks hatter}
-\subsection{Hvilken hatt er jeg?}
+Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi føler vi har god kontroll. Alt i alt følte vi dog at tilbakemeldingene vi fikk var av en positiv art, noe vi følte oss svært fornøyde med. Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interesante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på idèen vår. 
+
+
+\subsection{Hvilke hatter har vi i gruppen?}
+Det å ha rollen som den kritiske svarte hatten synes Andreas passet bra til ham, ettersom han ofte leter etter ting å være kritiske til i slike situasjoner. Utfordringen ligger i å velge ord med omhu. Han følte seg mest komfortabel med den røde hatten; å si hva han føler og mener uten begrunnelse. Dette passer bra med gruppens beskrivelse av Andreas. Andreas oppdaget også at enkelte av landsbyens medlemmer passet godt til den grønne hatten, ettersom det stadig var de samme deltakerne som kom med kreative innslag.
+
+Christian syntes også at den svarte hatten passet bra til han. Han liker å være kritisk til nye idèer for å være en deltaker i forbedringer rundt dette. Dette passer bra til resultatet Christian fikk etter SPGR-øvelsen (se avsnitt 4?: Person gruppe relasjon), der han i den situasjonen så seg selv som en analytisk og påståelig person. Christian likte ikke den blå hatten. Han synes det var kjedelig å sette seg inn i en saklig og prosessrelatert rolle som ikke kom med egne meninger og innspill.
+
+Trond syntes det var vanskelig å snevre inn sine tilbakemeldinger til en kategori. Han skulle ønske at man kunne være kritisk samtidig som man diskuterer muligheter og er kreativ. 
+
+Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blandt annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at han "nå skal den svarte hatten snakke", ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på det. 
+
+Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha en nøytralt syn og å fokuserer på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon til vanlig.
+
+Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilket personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst idèer, muligheter og meninger fra forskjellig vinkler. 
+
+Den blå hatten (prosessblikk) var det ingen på gruppen som kjente seg igjen i. Vi tenker at en slik person er en slags gruppeleder som har kontroll på hvordan gruppen ligger an, hva som må gjøres og hvordan man skal planlegge fremover. Kjetil mener at flere på gruppen egentlig har et prosessblikk på gruppearbeider, og at dette kanskje er noe man ikke tenker over. I tillegg har vi landsbylederen og fascilitatorene som følger oss opp. Dermed er alle hattene representert i gruppen vår.
 
 
