Updated and reformatted.

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -23,9 +23,10 @@ beskrevet.
 Han begynte sin spillkarriere med en Nintendo 64\cite{n64} i 1999. Da
 var det eventyr og rollespill (se Seksjon~\ref{sec:sjangre}) som Legend
 of Zelda\cite{legendofzelda} og Banjo Kazooie\cite{banjokazooie} som
-dominerte. Deretter gikk spillfokuset  over på konkurransespill som
-Counter-Strike og Warcraft da datamaskinen kom i hus. Han har i hovedsak
-vært en Nintendo fanboy\cite{fanboy}.
+stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
+konkurransespill som Counter-Strike og Warcraft. Han har i hovedsak vært
+en Nintendo fanboy\cite{fanboy}, men har i de senere år utvidet
+kolleksjonen til å omfatte Xbox.
 \end{description}
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
