--- a/konseptdokument/problem.tex
+++ b/konseptdokument/problem.tex
@@ -1,8 +1,16 @@
 \section{Problemstilling}\label{sec:problemstilling}
-Dette avsnittet vil ta for seg den valgte problemstillingen, hva som lå
-til grunn dette valget, og hvordan gruppen tenkte seg et konsept rundt
-problemstillingen.
-\subsection{Selve problemestillingen}
+Dette avsnittet vil ta for seg den valgte problemstillingen og hva som
+lå til grunn for dette valget.
+\subsection{Valg av problemstilling}
+En av de største begrensningene i selve oppgaven var at
+problemstillingen måtte sentrerest rundt det å skape interessante spill
+om resirkulering og gjenbruk. Etter flere runder internt ble gruppen
+enig om at det var ønskelig å lage et spill for flere spillere samtidig.
+Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
+mikroskopisk nivå (lokalt) og makroskopisk nivå (globalt). Ved å
+deretter bake inn grunnstenene i problemstillingen (resirkulering og
+redusert forbruk), ble problemstillingen forfattet.
+\subsection{Problemstillingen}\label{sec:problemstillingen}
 Den valgte problemstillingen er gjengitt nedenfor:
 \begin{quotation}
 \large\emph{``\input{../problemstilling}''}
