--- a/konseptdokument/references.tex
+++ b/konseptdokument/references.tex
@@ -7,4 +7,8 @@
 	placeholder
 \bibitem{fanboy}
 	Fanboy\\\url{http://dictionary.reference.com/browse/fanboy+or+fangirl}
+\bibitem{energispillet}
+	Energispillet\\\url{http://www.energispillet.no/}
+\bibitem{advancewars}
+	Advanced Wars\\\url{http://en.wikipedia.org/wiki/Advance\_Wars}
 \end{thebibliography}
