--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -72,9 +72,10 @@
 \include{intro}
 \include{problem}
 \include{process}
-\include{theidea}
+\include{concept}
 \include{dynamics}
 \include{genre}
 \include{artwork}
 \include{references}
+\include{conclusion}
 \end{document}
