--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -120,4 +120,4 @@ Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppem
 
 Den blå hatten (prosessblikk) var det ingen på gruppen som kjente seg igjen i. Vi tenker at en slik person er en slags gruppeleder som har kontroll på hvordan gruppen ligger an, hva som må gjøres og hvordan man skal planlegge fremover. Kjetil mener at flere på gruppen egentlig har et prosessblikk på gruppearbeider, og at dette kanskje er noe man ikke tenker over. I tillegg har vi landsbylederen og fascilitatorene som følger oss opp. Dermed er alle hattene representert i gruppen vår.
 
-
+Alle gruppemedlemmene syntes at De Bonos hatter var et nyttig verktøy. Det kan være en fin øvelse å bruke i utviklingsfasen av konseptet vårt. Vi bestemte oss for å ta en gjennomgang av hele prosjektet vårt en måned frem i tid ved bruk av De Bonos hatter. Dermed sikrer vi oss at alle aspekter blir tatt opp, og om det er noe vi kan endre/forbedre før vi sier oss fornøyde. Det er også viktig at alle på gruppen får være de forskjellige hattene, til og med de rollene man ikke liker. Det er for eksempel viktig at Ina og Kjetil tar på seg rollen som den kritiske. De andre på gruppen er ofte kritiske, men Ina og Kjetil sitter kanskje inne med kritikk de ikke vil ta opp som kan være avgjørende for prosjektets ferdigstilling. 
