Refleksjon på SPGR øvelse

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -146,10 +146,9 @@ Her er en oversikt over resultatene fra øvelsen:
 	Christian mente selv at han var konkurranseinnstilt, påståelig og analytisk. Kjetil var enig i at han var litt påståelig og til tider likegyldig, men den overordnede oppfatningen gruppen hadde av Christian var at han var demokratisk, støttende og tillitsfull. Andreas følte seg hørt når han fortalte noe til Christian.
 
 
-Refleksjon:
+Fra denne øvelsen kan man se at samtlige gruppemedlemmer føler seg mer ekstreme i væremåten sin enn hva som oppfattes av resten av gruppen. Det er da viktig å ha fokus fremmover på at man ikke blir for passiv, og selv om en føler seg veldig dominerende, betyr ikke det at man må lene seg tilbake, da det ikke er sikkert at det er slik resten av gruppen oppfatter en.  
 
-Alle følte seg mer ekstreme...
-15 min
+
 Felles refleksjon om temaet, inkl:
 
 	* Ledelsesstruktur
