--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -129,7 +129,7 @@ Alle gruppemedlemmene syntes at De Bonos hatter var et nyttig verktøy. Det kan 
 \section{Person- Gruppe Relasjon} %SPGR-øvelsen 21.03
 Den 21. mars bestemte gruppen seg for å gjennomføre en SPGR- test (Systematisere Person-Gruppe Relasjonen). Det var tidlig på morgenen, og gruppemedlemmene hadde nettopp fått en kopp kaffe. Produktiviteten var lav, og muligheten til å kvikne til med en gruppeøvelse var forlokkende. Hensikten med denne øvelsen var å se på hvilke typer adferd som fant sted i gruppen, gitt en bestemt situasjon. 
 
-Gruppen ble gitt 3 minutter til å bestemme seg for en situasjon de ville analysere. Generelt har det ikke vært noen store konflikter innad i gruppen, men det var to situasjoner som pekte seg ut som mer konfliktfulle enn andre. Den første situasjonen var valg av konsept, mens den andre situasjonen var en beslutning på om det endelige konseptet skulle spilles i sanntid eller om det skulle være turbasert. Den sistnevnte ble valgt, da det var enighet om at det var gruppens mest konfliktfylte situasjon. Trond ønsket at spillet skulle være turbasert, mens de andre gruppemedlemmene så for seg at spillet skulle spilles i sanntid. 
+Gruppen ble gitt 3 minutter til å bestemme seg for en situasjon de ville analysere. Generelt har det ikke vært noen store konflikter innad i gruppen, men det var to situasjoner som pekte seg ut som mer konfliktfulle enn andre. Den første situasjonen var valg av konsept, mens den andre situasjonen var en beslutning på om det endelige konseptet skulle spilles i sanntid eller om det skulle være turbasert. Den sistnevnte ble valgt, da det var enighet om at det var gruppens mest konfliktfylte situasjon. Trond ønsket at spillet skulle være turbasert, mens de andre gruppemedlemmene så for seg at spillet skulle spilles i sanntid. Andreas var redd for at dette var et dårlig valg av situasjon, ettersom Trond stod alene mot resten av gruppen. Men Trond syntes det var ok. Resultatet kunne bli interessant.
 
 Etter at en situasjon var valgt, ble hver enkelt deltaker gitt 5 minutter til å kartlegge sin egen adferd i den gitte situasjonen, etterfulgt av 10 minutter til å identifisere de andre gruppemedlemenes adferd. Endre Sjøvolds SPGR- figur ble brukt til å kartlegge hver enkelts adferd. Videre ble det gjennomført en felles gjennomgang på 25 minutter, hvor hver enkelt deltaker delte hvordan en så på sin egen adferd, etterfulgt av hvordan hver av de andre medlemmene hadde oppfattet denne personens adferd. 
 
@@ -150,17 +150,19 @@ Her er en oversikt over resultatene fra øvelsen:
 	Christian mente selv at han var konkurranseinnstilt, påståelig og analytisk. Kjetil var enig i at han var litt påståelig og til tider likegyldig, men den overordnede oppfatningen gruppen hadde av Christian var at han var demokratisk, støttende og tillitsfull. Andreas følte seg hørt når han fortalte noe til Christian.
 
 
-Fra denne øvelsen kan man se at samtlige gruppemedlemmer føler seg mer ekstreme i væremåten sin enn hva som oppfattes av resten av gruppen. Det er da viktig å ha fokus fremmover på at man ikke blir for passiv, og selv om en føler seg veldig dominerende, betyr ikke det at man må lene seg tilbake, da det ikke er sikkert at det er slik resten av gruppen oppfatter en.  
+Fra denne øvelsen kan man se at samtlige gruppemedlemmer føler seg mer ekstreme i væremåten sin enn hva som oppfattes av resten av gruppen. Et eksempel på dette var at de fleste hadde markert seg seg selv som påståelige, men av andre hadde blitt markert som mer forståelsesfulle, åpne og samarbeidsvillig. Andreas lurte litt på om det kunne ha noe med at man på grunn av at man var enige med hverandre ikke oppfattet andre som påståelige da det de sier reflekterer det en selv mener. 
+
+Fremover er det derfor viktig å ha fokus på at man ikke blir for passiv. Fordi selv om man føler seg veldig dominerende, er det ikke sikkert at det er slik resten av gruppen oppfatter denne personen. Det er derfor ikke noe i veien for at gruppemedlemmene legger seg litt mer frampå og våger mer.
 
 
-Felles refleksjon om temaet, inkl:
+%Felles refleksjon om temaet, inkl:
 
-	* Ledelsesstruktur
-	* Polarisering (motsetningsforhold mellom ulike typer atferd)
-	* Behov som må oppfylles (manglende adferd)
-	* Ansvarsfordeling
-	* Forpliktelser
-	* Deling av informasjon
-	* Vanskelige eller ubehagelige tema
-	* Beslutningsprosesser
-	* Er de tre grunnleggende gruppefunksjonene til Sjøvold til stede? (Kontroll, Omsorg, og Opposisjon)
+%	* Ledelsesstruktur
+%	* Polarisering (motsetningsforhold mellom ulike typer atferd)
+%	* Behov som må oppfylles (manglende adferd)
+%	* Ansvarsfordeling
+%	* Forpliktelser
+%	* Deling av informasjon
+%	* Vanskelige eller ubehagelige tema
+%	* Beslutningsprosesser
+%	* Er de tre grunnleggende gruppefunksjonene til Sjøvold til stede? (Kontroll, Omsorg, og Opposisjon)
